# tauri-plugin-media-parser

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  rust.md
crates/media-parser/: Cargo.toml  README.md
crates/media-parser/examples/: lab_fast_cold.rs  profile_thumbs.rs
crates/media-parser/src/: lib.rs  stream.rs  types.rs
crates/media-parser/src/decoders/: h264.rs  mod.rs
crates/media-parser/src/format/: mod.rs  registry.rs
crates/media-parser/src/format/mp3/: metadata.rs  (+1 more)
crates/media-parser/tests/: mp3_metadata.rs  mp4_metadata.rs
dist-js/: index.d.ts  index.js
examples/tauri-media-player/: README.md  package-lock.json  package.json
examples/tauri-media-player/scripts/: setup-linux.sh
examples/tauri-media-player/src/: index.html  media-parser.js
examples/tauri-media-player/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-media-player/src-tauri/capabilities/: default.json
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_cover.toml  get_subtitles.toml  get_thumbnails.toml
permissions/schemas/: schema.json
src/: av_clip.rs  clip.rs  commands.rs  errors.rs  lib.rs  metadata.rs  mp4_writer.rs  stream_reader.rs  subtitles.rs  thumbnails.rs  tracks.rs
src/bits/: reader.rs
src/helpers/: mod.rs  moov.rs
src/mp4/: stts.rs
src/streams/: doc.md
src/thumbnails/: doc.md  extractor.rs  mod.rs  utils.rs
tests/: http_clip_handler.rs  metadata_local_test.rs  remote_tests.rs  subtitles_local_test.rs  thumbnails_local_test.rs
(+9 files in other folders)
