[package]
name = "media_parser"
version = "0.1.0"
description = "Async MP4 parser utilities: metadata, tracks, thumbnails, and subtitles over seekable file/HTTP streams."
edition = "2024"
rust-version = "1.89.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
openh264 = { version = "0.8.1", features = ["source"], default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
async-trait = "0.1"
hyper = { version = "0.14", features = ["server", "http1", "tcp"], default-features = false }
http = "0.2"
bytes = "1"
rayon = "1.11"

[dev-dependencies]
wiremock = "0.6"
log = "0.4"
